<resources>
    <string name="app_name">Millionaire Key</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="Email">Email Id</string>
    <string name="password_hint_without_character_limit">Password</string>
    <string name="show_password">Show Password</string>
    <string name="text_forgot_password">Forgot Password?</string>
    <string name="app_home">Home</string>
    <string name="app_password">Change Password</string>
    <string name="app_transaction">Transaction</string>
    <string name="app_share">Share App</string>
    <string name="app_rate">Rate Us</string>
    <string name="app_contect">Contact us</string>
    <string name="app_about">About Us</string>
    <string name="app_profile">My Profile</string>
    <string name="app_desbord">Dashboard</string>
    <string name="app_news">News</string>
    <string name="app_travel">Travel</string>
    <string name="your_string_here">
        <u>Accept Terms and Conditions.</u>.
    </string>

    <string name="card_number">Card Number</string>
    <string name="mm_yy">MM/yy</string>
    <string name="card_holders_name">Name</string>
    <string name="cvv">CVV</string>
    <string name="proceed">Proceed with Card</string>
    <string name="example_name">jitu</string>
    <string name="example_email">jitu.umakanta@gmail.com</string>
    <string name="example_phone">8908315549</string>
    <string name="example_amount">10.00</string>
    <string name="test_description">Test description</string>
    <string name="pay">Pay</string>
    <string name="update_token">Update token</string>
</resources>
